# ClanBasedTuning

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: product_roadmap.md
docs/engineering/: lightning_build_plan.md  lightning_component_contracts.md  lightning_integration_assessment.md  native_trial_build_contract.md  native_trial_cpu_probe.md  source_review_ledger.md
examples/: native_clan_tuning.py
src/clan_based_tuning/: __init__.py  factory.py  optimizer.py  spec.py
src/clan_based_tuning/lightning/: __init__.py  environment.py  sampler.py  strategy.py
src/clan_based_tuning/ray/: __init__.py  checkpoint.py  rendezvous.py  scheduler.py
tests/: test_package.py
tests/framework_contracts/: __init__.py  native_trial_lightning_probe.py  test_native_trial_lightning_probe.py  test_ray_native_pbt_cycle.py  test_upstream_contracts.py
tests/unit/: test_checkpoint.py  test_factory.py  test_optimizer.py  test_rendezvous.py  test_sampler.py  test_scheduler_contract.py  test_spec.py  test_strategy.py
